Modification du site

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profinder, mon annuaire</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images\Logo png.png" type="image/x-icon">
 </head>
 <body>
-    Site en cours de maintenance
+<nav>
+    
+</nav>
+
+<H1>Site en cours de maintenance</H1>
+    
 </body>
 </html>
