--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 <body>
 <nav>
-    
+    <img class="logo-nav" src="images\Mon projet.png" alt="">
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <ul>
+          <li><a class="active" href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Feedback</a></li>
+        </ul>
 </nav>
 
 <H1>Site en cours de maintenance</H1>
