--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profinder, mon annuaire</title>
+    <title>Profinder, find your partner</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images\Logo png.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images\P letter.png" color = "white" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -19,13 +19,13 @@
           <nav>
             <ul>
               <li>
-                <a href="#" title="Hotels">Hotels</a>
+                <a href="#" title="About">About us</a>
               </li>
               <li>
-                <a href="#" title="Flights">Flights</a>
+                <a href="#" title="Solutions">Solutions</a>
               </li>
               <li>
-                <a href="#" title="Tours">Tours</a>
+                <a href="#" title="Contact">Contact</a>
               </li>
               <li>
                 <a class="btn" href="#" title="Register / Log In">Register/Log In</a>
